--- a/src/component/employee/style-header.css
+++ b/src/component/employee/style-header.css
@@ -1,6 +1,12 @@
-.sticky-header {
-  position: sticky;
+.ant-layout-header {
+  position: fixed;
   top: 0;
-  background-color: #fff;
+  width: 84%;
   z-index: 100;
+  box-shadow: 0px 2px 0px rgba(90, 89, 89, 0.255) !important;
+}
+
+.img_avatar {
+  width: 35px;
+  border-radius: 50%;
 }
