--- a/src/component/employee/style-sidebar.css
+++ b/src/component/employee/style-sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
   overflow-y: auto !important;
+  box-shadow: 0 10px 10px rgba(90, 89, 89, 0.255) !important;
 }
 
 .logo-container {
@@ -44,6 +45,6 @@
 }
 
 .menu_custom {
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 15px;
+  font-weight: 450;
 }
