--- a/src/component/employee/style-header.css
+++ b/src/component/employee/style-header.css
@@ -1,12 +1,25 @@
 .ant-layout-header {
   position: fixed;
   top: 0;
-  width: 84%;
+  width: 100%;
   z-index: 100;
+  background-color: white !important;
   box-shadow: 0px 2px 0px rgba(90, 89, 89, 0.255) !important;
 }
 
 .img_avatar {
   width: 35px;
   border-radius: 50%;
+}
+
+.title_logo {
+  text-align: center;
+  padding: 0;
+  width: 200px;
+  font-size: 30px;
+  color: rgb(61, 61, 61);
+  font-weight: bold;
+  margin-right: 50px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-style: italic;
 }
